--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^6.1.0
   category_navigator: ^1.1.6
   cached_network_image: ^3.3.0
+  firebase_core: ^2.22.0
+  cloud_firestore: ^4.13.1
 
 dev_dependencies:
   flutter_test:
