--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   provider: ^6.1.1
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0
+  hexcolor: ^3.0.1
 
 dev_dependencies:
   flutter_test:
