--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,8 @@ dependencies:
   carousel_slider: ^4.2.1
   dots_indicator: ^3.0.0
   hexcolor: ^3.0.1
+  responsive_framework: ^1.1.1
+  # flutter_native_splash: ^2.3.6
 
 dev_dependencies:
   flutter_test:
